# wizSDK

./: .buildinfo  .gitignore  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  wizsdk.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  wizsdk.doctree
.github/workflows/: upload_docs.yml
_sources/: wizsdk.rst.txt
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  objects.inv  searchindex.js  wizsdk.html
docs/_build/.doctrees/: environment.pickle  wizsdk.doctree
docs/_build/_sources/: modules.rst.txt
docs/_build/doctrees/: environment.pickle  index.doctree  wizsdk.doctree
docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  wizsdk.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree  wizsdk.doctree
docs/_build/html/_sources/: index.rst.txt  wizsdk.rst.txt
tests/: test_wizapi.py
wizapi/: __init__.py  client.py  mouse.py  pixels.py
wizsdk/: __init__.py  battle.py  card.py  client.py  constants.py  hotkey.py  keyboard.py  mouse.py  pixels.py  utils.py  window.py
wizsdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
