[tool.poetry]
name = "wizSDK"
version = "0.1.0"
description = "API for interacting with and making bots for wizard101"
authors = ["Underpaid Dev <underpaiddev1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
numpy = "^1.19.1"
wizwalker = "^0.12.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
