[tool.poetry]
name = "wizSDK"
version = "0.3.3"
description = "API for interacting with and making bots for wizard101"
authors = ["Underpaid Dev <underpaiddev1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
numpy = "^1.19.1"
opencv-python = "^4.4.0"
asyncchain = "^0.1.0"
wizwalker = "^0.13.0"
simple_chalk = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
