[tool.poetry]
name = "wizSDK"
version = "1.2.1"
description = "API for interacting with and making bots for wizard101"
authors = ["Underpaid Dev <underpaiddev1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
numpy = "^1.19.1"
opencv-python = "^4.4.0"
asyncchain = "^0.1.0"
wizwalker = "^0.13.0"
Sphinx = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
